# libltc_cmake

./: CMakeLists.txt
src/: decoder.h  encoder.h  ltc.h
